2000-03-16  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libntp/Makefile.am (EXTRA_DIST): Added snprintf.c

	* configure.in: Look for (and provide if it's missing) snprintf()

	* ntpd/ntp_request.c (dns_a): Call crypto_public with the resolved
	name and the peer pointer.
	(dns_a): crypto_public() is only available if PUBKEY is #defined.

	* ntpd/ntp_crypto.c (crypto_public): sprintf is Evil.  Use snprintf.
	(crypto_setup): Ditto
	(crypto_read): Ditto

	* ntpd/ntp_resolver.c (ntp_res_send): Lose some debugging noise.

	* ntpd/ntp_config.c (getconfig): Lose testing code.

	* ntpd/ntp_request.c (dns_a): Fix buglet in hostname length check.

2000-03-16  Harlan Stenn  <harlan@pfcs.com>

	* ntpd/ntp_request.c (dns_a): Start cracking the returned information.

2000-03-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_resolver.c (ntp_res): Authenticate the keyid.

	* ntpd/ntp_crypto.c (crypto_line): Fix definition
	(crypto_read): Ditto.

	* ntpd/ntp_config.c (getconfig): Move req_keyid generation here.

	* librsaref/Makefile.am (BUILT_SOURCES): Cleanup more nodist_ stuff.

2000-03-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* build (RSASUF): If we have rsaref2/ and are building
	--without-rsaref, note it as a build-directory suffix.

	* configure.in: 4.0.99h
	Crypto merge

	* librsaref/Makefile.am (nodist_librsaref_a_SOURCES): Added nodist_

2000-02-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Lose the changequote calls and fix the quoting.
	Reported by: Akim Demaille <akim@epita.fr>

	* ntpd/ntp_request.c: Log various error conditions.

2000-02-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99g

	* ntpd/ntpd.c: Only log EINTR if debug > 2.

2000-02-25  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/mkver.in (ConfStr): Use `-r' when configured with crypto.

	* ntpd/refclock_wwvb.c (wwvb_receive): Undo the previous chagne.

2000-02-24  Harlan Stenn  <stenn@whimsy.udel.edu>
